--- a/index.html
+++ b/index.html
@@ -7,41 +7,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rest Api</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="container">
-        <table id="mytable">
-            <tr>
-                <th>Object Id</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Phone No.</th>
-                <th>User Type</th>
-                <th>Actions</th>
-            </tr>
-        </table>
-    </div>
+    <div class="container-fluid">
+        <div class="container col-sm-12 col-8">
+            <table id="mytable" class="table table-bordered">
+                <thead class="bg-secondary text-white text-center">
+                    <tr>
+                        <th>Object Id</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Phone No.</th>
+                        <th>User Type</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
 
-    <div class="edit-container">
-        <fieldset>
-            <legend>Edit Data</legend>
-            <label for="name">Name</label>
-            <input type="text" name="name" id="name"><br><br>
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email"><br><br>
-            <label for="phone">Phone</label>
-            <input type="tel" name="phone" id="phone"><br><br>
-            <label for="userType">User Type</label>
-            <select name="userType" id="userType">
-                <option value="Free">Free</option>
-                <option value="Pro">Pro</option>
-                <option value="Premium">Premium</option>
-            </select>
-            <br><br>
-            <button id="update">Update</button>
-            <button id="cancel">Cancel</button>
-        </fieldset>
+        <div class="edit-container container col-sm-12 col-8">
+            <fieldset>
+                <legend>Edit Data</legend>
+                <label class="form-label" for="name">Name</label>
+                <input class="form-control" type="text" name="name" id="name"><br><br>
+                <label class="form-label" for="email">Email</label>
+                <input class="form-control" type="email" name="email" id="email"><br><br>
+                <label class="form-label" for="phone">Phone</label>
+                <input class="form-control" type="tel" name="phone" id="phone"><br><br>
+                <label class="form-label" for="userType">User Type</label>
+                <select class="form-select" name="userType" id="userType">
+                    <option value="Free">Free</option>
+                    <option value="Pro">Pro</option>
+                    <option value="Premium">Premium</option>
+                </select>
+                <br><br>
+                <button class="btn btn-success" id="update">Update</button>
+                <button class="btn btn-warning" id="cancel">Cancel</button>
+            </fieldset>
+        </div>
     </div>
     <script src="./app.js"></script>
 </body>
