--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
 
     <div class="container-fluid">
-        <p class="text-center h4">User Data <button class="btn btn-primary" id="new">New User</button></p>
+        <p class="text-center h4 p-2">User Data <button class="btn btn-primary" id="new">New User</button></p>
         <div class="col-sm-12 col-8 table-responsive w-100 ">
-            <table id="mytable" class="table table-striped w-100 ">
+            <table id="mytable" class="table">
                 <thead class="bg-secondary text-white text-center">
                     <tr>
                         <th>Object Id</th>
